--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.21)
-project(triedit)
+project(habitica)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -10,15 +10,23 @@ set(CMAKE_AUTOUIC ON)
 
 include_directories(.)
 
-
+set(-DCMAKE_PREFIX_PATH=/Users/antonclaudia/Qt/6.2.1/macos/lib/cmake)
 
 find_package(Qt6 COMPONENTS Core Widgets REQUIRED)
 
-add_executable(triedit
+add_executable(habitica
+        RepoDaily.h
+        RepoToDo.h
+        RepoHabits.h
+        Daily.h
+        UI.h
+        ControllerUser.h
+        RepoUser.h
+        Habits.h
         ToDoList.h
         User.h
-        main.cpp)
-target_link_libraries(triedit
+        main.cpp RepoToDo.h RepoDaily.h)
+target_link_libraries(habitica
         Qt::Core
         Qt::Gui
         Qt::Widgets
@@ -26,4 +34,4 @@ target_link_libraries(triedit
 
 find_package(Qt6 COMPONENTS Core Widgets REQUIRED)
 
-target_link_libraries(triedit Qt6::Core Qt6::Widgets)
+target_link_libraries(habitica Qt6::Core Qt6::Widgets)
